--- a/termos-de-uso.html
+++ b/termos-de-uso.html
@@ -295,7 +295,7 @@ overflow-x: hidden!important;
 						<div class="elementor-element elementor-element-3a723499 elementor-widget elementor-widget-image" data-id="3a723499" data-element_type="widget" data-widget_type="image.default">
 															<img fetchpriority="high" decoding="async" width="800" height="114" src="product_card_placeholder.svg" class="attachment-large size-large wp-image-17" alt="Logo [NOME_MARCA]" />															</div>
 				<div class="elementor-element elementor-element-47a203da elementor-widget elementor-widget-text-editor" data-id="47a203da" data-element_type="widget" data-widget_type="text-editor.default">
-									<p>Aprenda a construir aplicações poderosas sem programação usando a plataforma [FERRAMENTA_IA].</p>								</div>
+									<p>Aprenda a construir aplicações poderosas programando com linguagens e tecnologias modernas.</p>								</div>
 				<div class="elementor-element elementor-element-5de82963 e-grid-align-left e-grid-align-mobile-left e-grid-align-tablet-left elementor-widget-mobile__width-inherit elementor-shape-rounded elementor-grid-0 elementor-widget elementor-widget-social-icons" data-id="5de82963" data-element_type="widget" data-widget_type="social-icons.default">
 							<div class="elementor-social-icons-wrapper elementor-grid" role="list">
 							<span class="elementor-grid-item" role="listitem">
