--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -7,10 +7,10 @@
 	>
 <channel>
 	<title>
-	Comentários sobre LovablePRO	</title>
-	<atom:link href="https://lovablepro.com.br/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>https://lovablepro.com.br/</link>
-	<description>LovablePRO</description>
+	Comentários sobre Pacces	</title>
+	<atom:link href="https://spectacular-kringle-7acb90.netlify.app/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>https://spectacular-kringle-7acb90.netlify.app/</link>
+	<description>Pacces</description>
 	<lastBuildDate>Wed, 16 Jul 2025 16:34:51 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
@@ -20,11 +20,11 @@
 	<item>
 		<title>
 		Comentário sobre Hello world! por A WordPress Commenter		</title>
-		<link>https://lovablepro.com.br/hello-world/#comment-1</link>
+		<link>https://spectacular-kringle-7acb90.netlify.app/hello-world/#comment-1</link>
 
 		<dc:creator><![CDATA[A WordPress Commenter]]></dc:creator>
 		<pubDate>Wed, 16 Jul 2025 16:34:51 +0000</pubDate>
-		<guid isPermaLink="false">https://lovablepro.com.br/?p=1#comment-1</guid>
+		<guid isPermaLink="false">https://spectacular-kringle-7acb90.netlify.app/?p=1#comment-1</guid>
 
 					<description><![CDATA[Hi, this is a comment.
 To get started with moderating, editing, and deleting comments, please visit the Comments screen in the dashboard.
